--- a/package.json
+++ b/package.json
@@ -19,44 +19,45 @@
     "pip-install": "pip install undetected-chromedriver selenium requests setuptools"
   },
   "dependencies": {
-    "@heroui/react": "^2.7.8",
-    "@radix-ui/react-popover": "^1.1.11",
-    "@radix-ui/react-select": "^2.2.2",
-    "@radix-ui/react-slot": "^1.2.0",
-    "@tailwindcss/vite": "^4.1.5",
-    "@tanstack/react-table": "^8.21.3",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
+    "@heroui/react": "2.7.8",
+    "@internationalized/date": "3.10.0",
+    "@radix-ui/react-popover": "1.1.11",
+    "@radix-ui/react-select": "2.2.2",
+    "@radix-ui/react-slot": "1.2.0",
+    "@tailwindcss/vite": "4.1.5",
+    "@tanstack/react-table": "8.21.3",
+    "class-variance-authority": "0.7.1",
+    "clsx": "2.1.1",
+    "date-fns": "4.1.0",
     "firebase": "9.20.0",
-    "framer-motion": "^12.12.1",
-    "lodash": "^4.17.21",
-    "lucide-react": "^0.503.0",
-    "os-utils": "^0.0.14",
-    "react": "^18.3.1",
+    "framer-motion": "12.12.1",
+    "lodash": "4.17.21",
+    "lucide-react": "0.503.0",
+    "os-utils": "0.0.14",
+    "react": "18.3.1",
     "react-day-picker": "8.10.1",
-    "react-dom": "^18.3.1",
-    "recharts": "^2.12.7",
-    "styled-components": "^6.1.18",
-    "tailwind-merge": "^3.2.0",
+    "react-dom": "18.3.1",
+    "recharts": "2.12.7",
+    "styled-components": "6.1.18",
+    "tailwind-merge": "3.2.0",
     "tailwindcss": "3"
   },
   "devDependencies": {
-    "@playwright/test": "^1.47.2",
-    "@types/jest": "^29.5.14",
-    "@types/node": "^22.15.2",
-    "@types/os-utils": "^0.0.4",
-    "@types/react": "^18.3.8",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "cross-env": "^7.0.3",
-    "electron": "^32.1.2",
-    "electron-builder": "^25.0.5",
-    "npm-run-all": "^4.1.5",
-    "tw-animate-css": "^1.2.8",
-    "typescript": "^5.6.2",
-    "vite": "^5.4.7",
-    "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^2.1.1"
+    "@playwright/test": "1.47.2",
+    "@types/jest": "29.5.14",
+    "@types/node": "22.15.2",
+    "@types/os-utils": "0.0.4",
+    "@types/react": "18.3.8",
+    "@types/react-dom": "18.3.0",
+    "@vitejs/plugin-react": "4.3.1",
+    "cross-env": "7.0.3",
+    "electron": "32.1.2",
+    "electron-builder": "25.0.5",
+    "npm-run-all": "4.1.5",
+    "tw-animate-css": "1.2.8",
+    "typescript": "5.6.2",
+    "vite": "5.4.7",
+    "vite-tsconfig-paths": "5.1.4",
+    "vitest": "2.1.1"
   }
 }
